# remote_control

./: Cargo.toml  README.md  flake.nix
src/: main.rs
src/pages/: control.html  failed_login.html  login.html
