[package]
name = "remote-input"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
mouse-keyboard-input = "0.9.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
